Fix backend URL and rebuild for production

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 # Environment variables for production
 # Backend deployed on Render
-VITE_API_URL=https://festiechatplugin-backend.onrender.com/api
+VITE_API_URL=https://festiechatplugin-backend-8g96.onrender.com/api
+VITE_API_BASE_URL=https://festiechatplugin-backend-8g96.onrender.com
+VITE_SOCKET_URL=https://festiechatplugin-backend-8g96.onrender.com
