--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-VITE_API_URL=https://festiechatplugin-backend.onrender.com/api
-# VITE_API_URL=http://localhost:3002/api
+# For local development - use relative URLs to go through Vite proxy
+VITE_API_BASE_URL=
+# For production deployment
+# VITE_API_BASE_URL=https://festiechatplugin-backend-8g96.onrender.com
+
+# Legacy API URL (for other services) - also relative for development
+VITE_API_URL=/api
+
+# Socket URL for real-time communication (production backend)
+VITE_SOCKET_URL=https://festiechatplugin-backend-8g96.onrender.com
