--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Environment variables for production
-# Backend deployed on Render
-VITE_API_URL=https://festiechatplugin-backend-8g96.onrender.com/api
+# Backend deployed on Render - CORRECT URL
 VITE_API_BASE_URL=https://festiechatplugin-backend-8g96.onrender.com
+VITE_API_URL=https://festiechatplugin-backend-8g96.onrender.com/api
 VITE_SOCKET_URL=https://festiechatplugin-backend-8g96.onrender.com
