--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": "https://festiechatplugin-backend-8g96.onrender.com",
+      "VITE_API_URL": "https://festiechatplugin-backend-8g96.onrender.com/api",
+      "VITE_SOCKET_URL": "https://festiechatplugin-backend-8g96.onrender.com"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
