CRITICAL: Fix backend URL - explicit fallback to correct URL

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-# For local development - use relative URLs to go through Vite proxy
+# For local development - use empty string to trigger proxy
 VITE_API_BASE_URL=
 # For production deployment
 # VITE_API_BASE_URL=https://festiechatplugin-backend-8g96.onrender.com
 
-# Legacy API URL (for other services) - also relative for development
+# Legacy API URL (for other services) - also relative for development  
 VITE_API_URL=/api
 
 # Socket URL for real-time communication (production backend)
