Disable mock API usage for production environment

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
-# Environment variables for production
+# Environment variables for production - REAL API
 # Backend deployed on Render - CORRECT URL
+VITE_USE_MOCK_API=false
 VITE_API_BASE_URL=https://festiechatplugin-backend-8g96.onrender.com
 VITE_API_URL=https://festiechatplugin-backend-8g96.onrender.com/api
 VITE_SOCKET_URL=https://festiechatplugin-backend-8g96.onrender.com
